vlib/v/checker/tests/div_op_wrong_right_type_err_b.out
vlib/v/checker/tests/div_op_wrong_right_type_err_b.v:2:10: error: mismatched types `any_int` and `array_int` 
    1 | fn main() {
    2 |     10 / [1,2,3]
      |          ~~~~~~~
    3 | }
